<resources>
    <string name="app_name">FavoritPet</string>
    <string name="msg_title">선택을 시작하시겠습니까??</string>
    <string name="check_lbl">시작</string>
    <string name="msg_quest">좋아하는 애완동물은?</string>
    <string name="check_lbl">시작</string>
    <string name="cat1">고양이</string>
    <string name="cat2">고양이</string>
    <string name="cat3">고양이</string>
    <string name="bur_lbl">선택 완료</string>

</resources>
