<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="syl.kr.hs.emirim.favoritpet.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_title"
        android:textSize="20sp"/>
    <CheckBox
        android:id="@+id/check_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_title"
        />

    <TextView
        android:id="@+id/text_quest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_quest"
        android:textSize="20sp"
        android:visibility="invisible"
        />
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible">
        <RadioButton
            android:id="@+id/radio_cat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat1"

            />
        <RadioButton
            android:id="@+id/radio_cat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat2"

            />
        <RadioButton
            android:id="@+id/radio_cat3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat3"

            />
        <Button
            android:id="@+id/but_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bur_lbl"
            android:visibility="invisible"
            />
        <ImageView
            android:id="@+id/imgv_pet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/cat1"
            android:visibility="invisible"
            />

    </RadioGroup>
</LinearLayout>
